# Billino

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace-yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  refactor.md  spike.md
.github/workflows/: auto-label.yml  backend-ci.yml  ci.yml  codeql.yml  dependabot-autoformat.yml  frontend-ci.yml  tauri-build.yml  tauri-ci.yml
backend/: .coverage  .env.example  database.py  main.py  requirements.txt
backend/models/: __init__.py  customer.py  invoice.py  invoice_create.py  invoice_item.py  invoice_read.py  profile.py  stored_pdf.py  summary_invoice.py  summary_invoice_create.py  summary_invoice_read.py  table_models.py
backend/routers/: backups.py  customers.py  health.py  invoices.py  pdfs.py  profiles.py  summary_invoices.py
backend/scripts/: README.md  __init__.py  check_env.py  compare_a6_generators.py  debug_a6_layout.py  demo_a6_generator.py  demo_pdf_generation.py  (+2 more)
docs/: ROADMAP_BACKUP_EXPORT.md
electron/: .gitignore  package-lock.json  package.json
frontend/: .prettierrc.json  README.md  eslint.config.mjs  jest.config.cjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs
src-tauri/src/backend/: config.rs  error.rs  health.rs  mod.rs  monitor.rs  shutdown.rs  spawn.rs  state.rs
src-tauri/src/commands/: backend.rs  mod.rs
(+113 files in other folders)
