[package]
name = "app"
version = "0.1.0"
description = "Billino - Desktop Invoice Management"
authors = ["Billino Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["time", "rt", "macros"] }
futures = "0.3"
lazy_static = "1.4"
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]
